--- a/Detection/Detection_Task_1.ipynb
+++ b/Detection/Detection_Task_1.ipynb
@@ -6,9 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import cv2\n",
-    "import sys"
+    "import cv2"
    ]
   },
   {
@@ -17,69 +15,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "face_cascade = cv2.CascadeClassifier('C:\\\\Users\\\\vites\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python37-32\\\\Lib\\\\site-packages\\\\cv2\\\\data\\\\haarcascade_frontalface_default.xml')\n",
-    "eye_cascade = cv2.CascadeClassifier('C:\\\\Users\\\\vites\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python37-32\\\\Lib\\\\site-packages\\\\cv2\\\\data\\\\haarcascade_eye.xml')\n",
-    "video_capture = cv2.VideoCapture(0)"
+    "# Load the cascade classifiers for face and eye detection\n",
+    "face_cascade = cv2.CascadeClassifier(cv2.data.haarcascades + 'haarcascade_frontalface_default.xml')\n",
+    "eye_cascade = cv2.CascadeClassifier(cv2.data.haarcascades + 'haarcascade_eye.xml')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\vites\\appdata\\local\\programs\\python\\python37-32\\lib\\site-packages\\ipykernel_launcher.py:7: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
-      "  import sys\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-c80a362768ef>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mret\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mframe\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mvideo_capture\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mfaces\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mface_cascade\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdetectMultiScale\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[0meyes\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0meye_cascade\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdetectMultiScale\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "while True:\n",
-    "    ret, frame = video_capture.read()\n",
-    "    \n",
-    "    faces = face_cascade.detectMultiScale(frame)\n",
-    "    eyes = eye_cascade.detectMultiScale(frame)\n",
-    "    \n",
-    "    if faces != ():\n",
-    "        (x,y,w,h) = faces[0]\n",
-    "        cv2.rectangle(frame,(x,y),(x+w,y+h),(255,0,0),2)\n",
-    "        \n",
-    "    if len(eyes) > 0:\n",
-    "        (x,y,w,h) = eyes[0]\n",
-    "        cv2.rectangle(frame,(x,y),(x+w,y+h),(0,255,0),2)\n",
-    "        \n",
-    "    if len(eyes) > 1:\n",
-    "        (x,y,w,h) = eyes[1]\n",
-    "        cv2.rectangle(frame,(x,y),(x+w,y+h),(0,255,0),2)\n",
-    "        \n",
-    "    cv2.imshow(\"1\",frame)\n",
-    "    \n",
-    "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
-    "        break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "video_capture.release()\n",
-    "cv2.destroyAllWindows()"
+    "# Capture video from the webcam\n",
+    "video_capture = cv2.VideoCapture(0)\n",
+    "\n",
+    "try:\n",
+    "    while True:\n",
+    "        # Read a frame\n",
+    "        ret, frame = video_capture.read()\n",
+    "        if not ret:\n",
+    "            print(\"Failed to capture frame.\")\n",
+    "            break\n",
+    "    \n",
+    "        # Convert the frame to grayscale\n",
+    "        gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
+    "    \n",
+    "        # Detect faces in the frame\n",
+    "        faces = face_cascade.detectMultiScale(gray, scaleFactor=1.3, minNeighbors=5, minSize=(30, 30))\n",
+    "    \n",
+    "        # Process each detected face\n",
+    "        for (x, y, w, h) in faces:\n",
+    "            cv2.rectangle(frame, (x, y), (x + w, y + h), (255, 0, 0), 2)\n",
+    "            roi_gray = gray[y:y + h, x:x + w]\n",
+    "            roi_color = frame[y:y + h, x:x + w]\n",
+    "    \n",
+    "            # Detect eyes within the face region\n",
+    "            eyes = eye_cascade.detectMultiScale(roi_gray)\n",
+    "            for (ex, ey, ew, eh) in eyes:\n",
+    "                cv2.rectangle(roi_color, (ex, ey), (ex + ew, ey + eh), (0, 255, 0), 2)\n",
+    "    \n",
+    "        # Display the resulting frame\n",
+    "        cv2.imshow('Video', frame)\n",
+    "    \n",
+    "        # Exit the loop if 'q' key is pressed\n",
+    "        if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "            break\n",
+    "        if cv2.getWindowProperty('Video', cv2.WND_PROP_VISIBLE) < 1:\n",
+    "            break\n",
+    "    \n",
+    "except Exception as e:\n",
+    "    print(f\"An error occurred: {e}\")\n",
+    "finally:\n",
+    "    video_capture.release()\n",
+    "    cv2.destroyAllWindows()"
    ]
   },
   {
@@ -92,7 +80,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -106,9 +94,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
