Added description to Detection Task 1

--- a/Detection/Detection_Task_1.ipynb
+++ b/Detection/Detection_Task_1.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Real-Time Face and Eye Detection with OpenCV\n",
+    "\n",
+    "This code captures video from the webcam and detects faces and eyes in real-time using OpenCV's Haar cascade classifiers.\n",
+    "\n",
+    "## Steps:\n",
+    "1. **Load Classifiers**: Haar cascades for face and eye detection are loaded.\n",
+    "2. **Capture Video**: Video input is captured from the webcam.\n",
+    "3. **Process Frames**: Each frame is converted to grayscale for detection.\n",
+    "4. **Detect Faces and Eyes**: Faces are detected and marked with blue rectangles, and eyes within those faces are marked with green rectangles.\n",
+    "5. **Display Video**: The processed video is shown in a window."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
