--- a/Bank_Waiting_Time_Deep_Learning/BankWaitingTime.ipynb
+++ b/Bank_Waiting_Time_Deep_Learning/BankWaitingTime.ipynb
@@ -4,18 +4,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Машинное обучение для СМО\n",
+    "# Predicting Waiting Time in Banks Using Machine Learning\n",
     "\n",
-    "Использование методов машинного обучения для прогнозирования времени ожидания в банках новых клиентов в зависимости времени прибытия клиента и количества прибывших людей.\n",
+    "## Project Overview\n",
+    "The project's goal is to predict the waiting time of new customers in banks using machine learning methods. The primary objective is to forecast the waiting time based on the customer's arrival time and the current number of people in the queue.\n",
     "\n",
-    "Решение задачи подразумевает обучение нейронной сети с использованием датасета, который включает статистику трех банков в течение 4 недель."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Подключение библиотек"
+    "## Key Stages\n",
+    "\n",
+    "### 1. Data Collection and Processing\n",
+    "- Data was collected from three banks over four weeks.\n",
+    "- Each file contains information about customer arrival time, waiting time, and service time.\n",
+    "\n",
+    "### 2. Data Exploration\n",
+    "- Key statistical indicators, such as average waiting time and the number of people in the queue, were calculated.\n",
+    "- Histograms and normal distributions were created to analyze probability density functions.\n",
+    "\n",
+    "### 3. Data Preparation\n",
+    "- Input data (hours, minutes, day of the week) was encoded using mean encoding techniques for regression.\n",
+    "- The data was split into training and testing sets.\n",
+    "- Feature standardization was performed.\n",
+    "\n",
+    "### 4. Theoretical Foundation: Queueing Theory (QMS)\n",
+    "- To better understand the waiting process, the concept of **Queueing Management Systems (QMS)** was used.\n",
+    "- QMS describes systems where customers (e.g., bank visitors) require service, and service facilities (e.g., tellers or managers) provide that service.\n",
+    "- The **M/M/1 model** was used, which assumes a single queue and one service facility with exponentially distributed inter-arrival and service times.\n",
+    "- Key model parameters:\n",
+    "  - **λ (lambda)** — the arrival rate (average number of customers per unit of time).\n",
+    "  - **μ (mu)** — the service rate (average number of customers served per unit of time).\n",
+    "  - **ρ (rho)** — the system's utilization factor, calculated as ρ = λ / μ.\n",
+    "- The model allows the estimation of the average waiting time in the queue and the number of customers in the system, which is then used in machine learning to enhance prediction accuracy.\n",
+    "\n",
+    "### 5. Model Development\n",
+    "- A neural network with two hidden layers was developed and trained to predict waiting times.\n",
+    "- The model was trained over 500 epochs using the Keras and TensorFlow libraries.\n",
+    "\n",
+    "### 6. Model Evaluation\n",
+    "- During training, the model demonstrated decreasing loss on the validation set, indicating improved prediction accuracy.\n",
+    "\n",
+    "## Results\n",
+    "The model achieved minimal loss values on the test set, confirming its ability to accurately predict customer waiting times based on their arrival time and the current workload of the bank.\n"
    ]
   },
   {
@@ -47,15 +74,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Загрузка данных из датасета"
+    "# Loading Data from Dataset"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Загрузка данных\n",
-    "Данные обрабатывались так, чтобы записывать время прибытия, время проведённое в очереди и время обслуживания клиента в банке."
+    "The data was processed to record the arrival time, the time spent in the queue, and the service time of the client in the bank."
    ]
   },
   {
